# mcp-ai-memory

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  README_EN.md  SKILL.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  quickstart.sh
.cursor/skills/project-memory-sync/: SKILL.md
src/mcp_ai_memory/: __init__.py  config.py  prompts.py  schemas.py  server.py
src/mem0_local_mcp/: __init__.py  config.py  schemas.py  server.py
tests/: diagnose_api.py  test_mcp_server.py  test_mem0_direct.py  test_qdrant_filters.py
